--- a/public/index.html
+++ b/public/index.html
@@ -26,10 +26,12 @@
     -->
 
     <!--Link a fuente de google-->
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@500&family=Tenor+Sans&display=swap" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Jura" />
+    <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Days+One" />
+    <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Droid+Sans" />  
 
-    <title>React App</title>
+    
+    <title>Star Home</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
